--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
     <div class="col-12 col-md-8 content-box ">
       <div class="d-flex">
         <header>
-          <a [routerLink]="[ '/groups']" alt="ShareGroup" title="House">กลุ่ม แชร์สำหรับฉัน<i class="fa fa-angle-right"
+          <a [routerLink]="[ '/groups']" >กลุ่ม แชร์สำหรับฉัน<i class="fa fa-angle-right"
               aria-hidden="true"></i></a>
           <div>กลุ่มของคุณ</div>
         </header>
@@ -26,7 +26,7 @@
         
         <div *ngFor="let group of Groups" >
           <a class="" [routerLink]="['/groups/groupfolder',group.ID_Group]"><img
-              src="http://www.landvist.xyz/images/{{group.Img}}" class="img-circle " alt="User Image" width="70px"
+              src="{{group.Img}}" class="img-circle " alt="User Image" width="70px"
               height="70px"></a>
           <div class="">{{group.NameG}} </div>
         </div>
@@ -65,7 +65,7 @@
 
             <a [routerLink]="['/houses',house.ID_Property]">
               <div class="item">
-                <img src="http://www.landvist.xyz/images/{{house.ImageEX}}" width="80%" height="80%"
+                <img src="{{house.ImageEX}}" width="80%" height="80%"
                   class="img-fluid rounded ">
                 <div class="info">
                   <header>{{house.AnnounceTH}}</header>
@@ -121,7 +121,7 @@
 
             <a [routerLink]="['/lands',lands.ID_Lands]" [queryParams]="{page: activePage}">
               <div class="item">
-                <img src="http://www.landvist.xyz/images/{{lands.ImageEX}}" width="180" class="img-fluid  rounded">
+                <img src="{{lands.ImageEX}}" width="180" class="img-fluid  rounded">
                 <div class="info">
                   <header>{{lands.AnnounceTH}}</header>
                   <div class="price">ราคา <span>{{lands.SellPrice | number}}</span> บาท</div>
@@ -146,7 +146,7 @@
 
     <div class="col-12 col-md-4 content-box">
       <header>
-        อสังหาริมทรัพย์ แนะนำ<i class="fa fa-angle-right" aria-hidden="true"></i>
+       <a [routerLink]="['/recommend']" > อสังหาริมทรัพย์ แนะนำ<i class="fa fa-angle-right" aria-hidden="true"></i></a>
         <div>แนะนำ รูปแบบ การลงทุนอสังหาฯ</div>
       </header>
 
