--- a/src/app/components/houses/houses-detail/houses-detail.component.html
+++ b/src/app/components/houses/houses-detail/houses-detail.component.html
@@ -472,7 +472,7 @@
               <div class="row">
                 <div class="col-md-12 ">
                   <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom">
-                    <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+                    <agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>
                   </agm-map>
                 </div>
               </div>
