--- a/src/app/components/houses/updateimg-h/updateimg-h.component.html
+++ b/src/app/components/houses/updateimg-h/updateimg-h.component.html
@@ -1,10 +1,10 @@
 <app-navbar></app-navbar>
 <img src="../../../assets/Property.jpg" class="img-fluid" alt="Responsive image" style="width:100%;">
-<div class="container " style="width:100%;">
-  <div id="product-container" *ngFor="let house of results">
+<div class="container " *ngFor="let house of results">
+  <div id="product-container">
 
     <div class="row">
-      <div class="col-md-7">
+      <div class="col-md-12">
         <br>
         <ul id="breadcrumb-nav" typeof="BreadcrumbList">
           <li property="itemListElement" typeof="ListItem"><a [routerLink]="[ '/home' ]" property="item"
@@ -19,96 +19,119 @@
                 property="name">แก้ไขรูปภาพ</span></a>
             <meta property="position" content="3">
           </li>
-          <li property="itemListElement" typeof="ListItem"><a property="item" typeof="WebPage"><span
-                property="name">{{house.AnnounceTH}}</span></a>
+          <li property="itemListElement" typeof="ListItem"><a property="item" typeof="WebPage"
+              [routerLink]="['/houses',house.ID_Property]"><span property="name">{{house.AnnounceTH}}</span></a>
             <meta property="position" content="4">
           </li>
         </ul>
         <br>
         <h1><i style="color: rgb(202, 129, 70)" class="fas fa-images"></i> แก้ไขรูปภาพ </h1>
       </div>
-
     </div>
-    <div class="row">
-      <div class="col-md-12  ">
-        <div class="row">
-          <div class="container jumbotron">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-12">
-                  <h4>เพิ่มรูปภาพ</h4>
-                  <a href="">{{ID_Property}}</a>
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">อัพโหลด</span>
-                    </div>
-                    <div class="custom-file">
-                      <input type="file" class="custom-file-input" id="inputGroupFile01" name="file" multiple
-                        ng2FileSelect [uploader]="uploader">
-                      <label class="custom-file-label" for="inputGroupFile01">เลือกรูปภาพ</label>
-                    </div>
-                  </div><br />
-                  <div class="row">
-                    <div class="col-sm-3" *ngFor='let url of imagenew'>
-                      <button type="button" class="btn btn-outline-light">
-                        <button id="xButton" type="button" class="close"  data-dismiss="alert" aria-label="Close"  (click)="onRemoveimage(url)"
-                       >
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                        <img class="card-img-top" src="http://www.landvist.xyz/images/{{url.URL}}" width="200px"
-                          height="150px">
-
-                      </button>
-                    </div>
-                   
-                    <div class="col-sm-3" *ngFor='let url of localImageUrl'>
-                      <button type="button" class="btn btn-outline-light">
-                        <button id="xButton" type="button" class="close" data-dismiss="alert" aria-label="Close"
-                          (click)="onRemoveFile(url)">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                        <img class="card-img-top" [src]="sanitizer.bypassSecurityTrustUrl(url)" sizes="50px">
-                      </button>
-                    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12  ">
+      <div class="row">
+        <div class="container jumbotron">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <h4>เพิ่มรูปภาพ</h4>
+                <div class="input-group mb-3">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text">อัพโหลด</span>
                   </div>
-                  <br />
-                  <table class="table">
-                    <thead>
-                      <tr>
-                        <th width="50%">ชื่อ</th>
-                        <th>ขนาด</th>
-                        <th>สถานะ</th>
-                        <th>Actions</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let item of uploader.queue">
-                        <td><strong>{{ item?.file?.name }}</strong></td>
-                        <td nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
-                        <td>
-                          <div class="progress" style="margin-bottom: 0;">
-                            <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': item.progress + '%' }">
+                  <div class="custom-file">
+                    <input type="file" class="custom-file-input" id="inputGroupFile01" name="file" multiple
+                      ng2FileSelect [uploader]="uploader">
+                    <label class="custom-file-label" for="inputGroupFile01">เลือกรูปภาพ</label>
+                  </div>
+                </div><br />
+                <div class="row">
+                  <div class="col-sm-3" *ngFor='let url of imgbox'>
+                    <button type="button" class="btn btn-outline-light">
+                      <button id="xButton" type="button" class="close" data-toggle="modal" data-target="#exampleModalCenter" aria-label="Close" (click)="onRemoveimage(url)">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+
+                      <!-- Modal -->
+                      <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+                        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="exampleModalCenterTitle">ต้องการลบรูปภาพนี้ใช่หรือไม่?</h5>
+                            </div>
+                            <div class="modal-body">
+                              <div class=" row text-center">
+                                <div class="col-md-6">
+                                  <button type="button" class="btn btn-success" data-dismiss="modal"
+                                    (click)="DELETE()">
+                                    <i class="fas fa-trash-alt"></i> ยืนยัน
+                                  </button>
+                                </div>
+                                <div class="col-md-6">
+                                  <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="refresh()">
+                                    ยกเลิก
+                                  </button>
+                                </div>
+                              </div>
                             </div>
                           </div>
-                        </td>
-                        <td>
-                          <div *ngIf="item.isSuccess" class="badge badge-success text-wrap" style="width: 6rem;">
-                            อัพโหลดสำเร็จ
-                          </div>
-                          <div *ngIf="item.isError" class="badge badge-danger text-wrap" style="width: 6rem;">
-                            อัพโหลดผิดพลาด
-                          </div>
-                          <span *ngIf="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                  <div>
-                    <button type="button" class="btn btn-success btn-s" (click)="uploader.uploadAll()"
-                      [disabled]="!uploader.getNotUploadedItems().length">
-                      <span class="glyphicon glyphicon-upload"></span> เพิ่มรูปภาพ
+                        </div>
+                      </div>
+                      <img class="card-img-top" src="{{url.URL}}" width="200px" height="150px">
+
                     </button>
                   </div>
+
+                  <div class="col-sm-3" *ngFor='let url of localImageUrl'>
+                    <button type="button" class="btn btn-outline-light">
+                      <button id="xButton" type="button" class="close" data-dismiss="alert" aria-label="Close"
+                        (click)="onRemoveFile(url)">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                      <img class="card-img-top" [src]="sanitizer.bypassSecurityTrustUrl(url)" sizes="50px">
+                    </button>
+                  </div>
+                </div>
+                <br />
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th width="50%">ชื่อ</th>
+                      <th>ขนาด</th>
+                      <th>สถานะ</th>
+                      <th>Actions</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let item of uploader.queue">
+                      <td><strong>{{ item?.file?.name }}</strong></td>
+                      <td nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
+                      <td>
+                        <div class="progress" style="margin-bottom: 0;">
+                          <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': item.progress + '%' }">
+                          </div>
+                        </div>
+                      </td>
+                      <td>
+                        <div *ngIf="item.isSuccess" class="badge badge-success text-wrap" style="width: 6rem;">
+                          อัพโหลดสำเร็จ
+                        </div>
+                        <div *ngIf="item.isError" class="badge badge-danger text-wrap" style="width: 6rem;">
+                          อัพโหลดผิดพลาด
+                        </div>
+                        <span *ngIf="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+                <div>
+                  <button type="button" class="btn btn-success btn-s" (click)="uploader.uploadAll()"
+                    [disabled]="!uploader.getNotUploadedItems().length">
+                    <span class="glyphicon glyphicon-upload"></span> เพิ่มรูปภาพ
+                  </button>
                 </div>
               </div>
             </div>
@@ -116,14 +139,15 @@
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="col-md-12 ">
-        <button class="btn btn-success float-right" [routerLink]="['/houses',house.ID_Property]" (click)="onFinish()" >
-          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> บันทึกข้อมูล
-        </button>
-      
+  <div class="col-md-12 ">
+    <button class="btn btn-success float-right" [routerLink]="['/houses',house.ID_Property]" (click)="onFinish()">
+      <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> บันทึกข้อมูล
+    </button>
+
   </div>
-  </div>
+
 </div>
 
 <app-footer></app-footer>
