--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -29,7 +29,7 @@
         <form (submit)="login()" [formGroup]="form">
           <div class="form-group">
             <label>อีเมล</label>
-            <input type="text" [(ngModel)]="credentials.Email" formControlName="Email" class="form-control"
+            <input type="text" [(ngModel)]="credentials.Email" formControlName="Email" class="form-control" style="width: 320px;"
               placeholder="อีเมล" [ngClass]="{ 'is-invalid': submitted && f.Email.errors }" />
             <div *ngIf="submitted && f.Email.errors" class="invalid-feedback">
               <div *ngIf="f.Email.errors.required">โปรดกรอกอีเมล</div>
@@ -37,8 +37,13 @@
           </div>
           <div class="form-group">
             <label>รหัสผ่าน</label>
-            <input type="password" [(ngModel)]="credentials.Password" formControlName="Password" class="form-control"
-              placeholder="ป้อนรหัสผ่าน" [ngClass]="{ 'is-invalid': submitted && f.Password.errors }" />
+            <div class="input-group" id="show_hide_password">
+              <input type="password" [(ngModel)]="credentials.Password" formControlName="Password" class="form-control"
+                placeholder="ป้อนรหัสผ่าน" [ngClass]="{ 'is-invalid': submitted && f.Password.errors }" />
+              <div class="input-group-addon">
+                <button class="btn btn-outline-secondary showpass" type="button"><i id="Showpass" class="fa fa-eye-slash" aria-hidden="true"></i></button>
+              </div>
+            </div>
             <div *ngIf="submitted && f.Password.errors" class="invalid-feedback">
               <div *ngIf="f.Password.errors.required">ป้อนรหัสผ่าน</div>
             </div>
